<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">News App</string>
    <string name="saved_searches_notification_id" translatable="false">saved_searches_notifications</string>
    <string name="saved_searches_name_notifications">Saved Searches Notifications</string>
    <string name="saved_searches_description_notifications">This notification channel is used to send notification for new articles for saved searches in the app</string>
    <string name="author_website">https://isrna.com/</string>

    <!-- News Categories -->
    <string name="top_headlines">Top Headlines</string>
    <string name="business">Business</string>
    <string name="sports">Sports</string>
    <string name="entertainment">Entertainment</string>

    <!-- General UI items -->
    <string name="search">Search…</string>
    <string name="read_more">Read more…</string>
    <string name="loading">Loading…</string>
    <string name="saved_searches">Saved Searches</string>
    <string name="settings">Settings</string>
    <string name="author">Author</string>
    <string name="save_search">Save Search</string>
    <string name="delete_keyword_question">Do you want to delete the keyword: %1$s?</string>
    <string name="invalid_url">Invalid url!</string>
    <string name="for_keywords">For keywords:&#032;</string>
    <string name="latest_article_keyword_are">Latest articles for the saved keywords are:</string>
    <string name="new_article_notification_title">New articles in saved searches</string>
    <string name="daily_quote">Daily Quote</string>
    <string name="article_image">Article image</string>
    <string name="date">Date</string>

    <!-- Socials -->
    <string name="share_on_facebook">Share on Facebook</string>
    <string name="share_on_twitter">Share on Twitter</string>
    <string name="share_on_whatsapp">Share on WhatsApp</string>

    <!-- Settings Page -->
    <string name="saved_searches_notifications">Saved Searches Notifications</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="saved_searches_notification_description">The app will check for new articles based on saved search keywords every 15 minutes.</string>
    <string name="enable_notifications_setting_key" translatable="false">enable_notifications_default_setting</string>
    <string name="track_status_notifications_setting_key" translatable="false">track_status_notifications_setting_key</string>
    <string name="enable_notifications_default_setting" translatable="false" tools:ignore="ExtraTranslation">true</string>
    <string name="error_cannot_delete_keyword">Oops, something went wrong, we couldn\'t delete the keyword</string>

    <!-- Error Messages -->
    <string name="missing_whatsapp">WhatsApp is not installed.</string>
    <string name="missing_twitter">Twitter is not installed.</string>
    <string name="missing_facebook">Facebook is not installed.</string>
    <string name="unknown_error_message">Unknown Error, please try again later.</string>
    <string name="try_again_error_message">Some error occurred, please try again later</string>
    <string name="delete_error_message">Couldn\'t complete the deletion, try again later!</string>
    <string name="nothing_found_error_message">Nothing to be found!</string>
    <string name="no_internet_error_message">Could not connect to the internet. Check your connection!</string>
    <string name="server_problem_error_message">The server has currently some trouble, try again later!</string>
    <string name="no_more_results_error">You\'ve reached the end!</string>
    <string name="unknown_category_error_message">That\'s an unknown category, try restarting the app.</string>
    <string name="no_more_data_from_api_error_message">You\'ve reached the end!</string>
    <string name="failed_to_open_article_error_message">Error occurred with this article, try again later.</string>
</resources>